part-1-and-2/k8s/grades.yml
apiVersion: v1
kind: Service
metadata:
  name: grades-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: grades
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grades-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grades
    spec:
      containers:
        - name: grades
          image: ms/grades:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
  selector:
    matchLabels:
      app: grades
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grades-db
spec:
  selector:
    matchLabels:
      app: grades-db
  serviceName: grades-db
  replicas: 1
  template:
    metadata:
      labels:
        app: grades-db
    spec:
      containers:
        - name: grades-db
          image: ms/grades-db:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: grades-db-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: grades-db-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: grades-db
spec:
  selector:
    app: grades-db
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
