part-1-and-2/k8s/secrets.yml
apiVersion: v1
kind: Service
metadata:
  name: secrets-service
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: secrets
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrets-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: secrets
    spec:
      containers:
        - name: secrets
          image: ms/secrets:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              protocol: TCP
  selector:
    matchLabels:
      app: secrets
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: secrets-db
spec:
  selector:
    matchLabels:
      app: secrets-db
  serviceName: secrets-db
  replicas: 1
  template:
    metadata:
      labels:
        app: secrets-db
    spec:
      containers:
        - name: secrets-db
          image: ms/secrets-db:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: secrets-db-volume
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: secrets-db-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: secrets-db
spec:
  selector:
    app: secrets-db
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
